--- a/react_prac3/package.json
+++ b/react_prac3/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "sass": "^1.56.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
